--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>You Might Not Need jQuery</title>
   </head>
   <body>
-    <h1 id="title">You May Not Need JQuery</h1>
+    <h1 id="title">You Might Not Need jQuery</h1>
     <script src="./dist/bundle.js"></script>
   </body>
 </html>
