Add TS support for webpack config and assets loader

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>You Might Not Need jQuery</title>
+  <body>
+    <h1 id="title">You Might Not Need jQuery</h1>
 
+    <img src="./assets/photo.jpg">
+    <div class="image"></div>
     <table id="table">
       <thead>
         <tr>
@@ -25,8 +29,6 @@
       </tbody>
     </table>
   </head>
-  <body>
-    <h1 id="title">You Might Not Need jQuery</h1>
-    <script src="./dist/main.bundle.js"></script>
+
   </body>
 </html>
